--- a/app/src/main/res/layout-v16/activity_login.xml
+++ b/app/src/main/res/layout-v16/activity_login.xml
@@ -77,9 +77,7 @@
                         android:layout_marginRight="20dp"
                         android:fontFamily="@font/poppinsbold"
                         android:text="Login"
-                        android:textSize="25sp"
-                        tools:targetApi="jelly_bean"
-                        tools:ignore="HardcodedText" />
+                        android:textSize="25sp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -98,13 +96,12 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:fontFamily="sans-serif"
-                            android:textSize="16sp"
+                            android:textSize="16dp"
                             android:inputType="text"
                             android:hint="@string/user"
                             android:textColorHighlight="@color/orange"
                             android:tag="0"
-                            tools:targetApi="jelly_bean"
-                            android:drawableStart="@drawable/ic_email" />
+                            />
                     </LinearLayout>
 
                     <LinearLayout
