--- a/app/src/main/res/menu/menu_payment_panel.xml
+++ b/app/src/main/res/menu/menu_payment_panel.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_delete_payment"
-        android:title="@string/delete"
-        android:icon="@drawable/ic_trash_24dp"
+        android:id="@+id/action_save_payment"
+        android:title="@string/save_draft"
+        android:icon="@drawable/ic_material_save"
         app:showAsAction="always"/>
 
     <item
