--- a/app/src/main/res/layout/activity_payment_list.xml
+++ b/app/src/main/res/layout/activity_payment_list.xml
@@ -69,7 +69,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_error_56dp"/>
+                    app:srcCompat="@drawable/ic_error_56dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
